ADD_SUBDIRECTORY(Check)
ADD_SUBDIRECTORY(EQKDIF)
ADD_SUBDIRECTORY(EQNS)
ADD_SUBDIRECTORY(EXCHANGE)
ADD_SUBDIRECTORY(MAIN)
ADD_SUBDIRECTORY(MATH)
ADD_SUBDIRECTORY(MESH)
ADD_SUBDIRECTORY(MGRID)
ADD_SUBDIRECTORY(MODCOM)
ADD_SUBDIRECTORY(PARAM)
ADD_SUBDIRECTORY(PIO)
ADD_SUBDIRECTORY(tuning)
ADD_SUBDIRECTORY(UDF)
ADD_SUBDIRECTORY(VORTEX)
ADD_SUBDIRECTORY(XIO)
ADD_SUBDIRECTORY(ZONE)
