# ---------------------------------------------------------------------------\
# Description: Specify CMake directives for this directory
# ---------------------------------------------------------------------------/

# ---------------------------------------------------------------------------\
SET(KIT Typhon)
SET(KIT_LIBS
${pName}FileFormat 
${pName}${KIT}
)
# ---------------------------------------------------------------------------|


# Create a library which includes the source files.
# The extension is already found.  Any number of sources could be listed here.
SET(Kit_SRCS
ZONE/zone_preproc.f90
ZONE/update_field.f90
ZONE/split_zone.f90
ZONE/prb_zone_vol.f90
ZONE/prb_boco_field.f90
ZONE/initzone_field.f90
ZONE/init_ustboco_singpanel.f90
ZONE/init_ustboco_kutta.f90
ZONE/init_ustboco_ghostface.f90
ZONE/init_ustboco_ghostcell.f90
ZONE/init_gridfield_ust.f90
ZONE/init_connect_grid.f90
ZONE/init_connect.f90
ZONE/donnees_echange.f90
ZONE/calc_zonetimestep.f90
ZONE/calc_varprim.f90
ZONE/calc_varcons.f90
ZONE/calc_refcons.f90
ZONE/MENU_ZONECOUPLING.f90
ZONE/ZONE_COUPLING.f90
ZONE/DEFZONE.f90
ZONE/DEFCAPTEURS.f90
ZONE/BOUND.f90
XIO/outputzone_ustmesh.f90
XIO/outputzone_open.f90
XIO/outputzone_sol.f90
XIO/outputzone_close.f90
XIO/output_zone.f90
XIO/output_tecplot.f90
XIO/output_tec_ust_boco.f90
XIO/output_tec_ust_ctr.f90
XIO/output_tec_ust.f90
XIO/comp_flux.f90
XIO/REPRISE.f90
VORTEX/init_vort_ust.f90
VORTEX/init_boco_vort.f90
VORTEX/def_model_vortex.f90
VORTEX/def_init_vortex.f90
VORTEX/def_boco_vortex.f90
VORTEX/VORTEX2D.f90
VORTEX/MENU_VORTEX.f90
VORTEX/PAN2D_LIN.f90
UDF/udf_ns_init.f90
UDF/udf_kdif_aniso.f90
PIO/rpm_output.f90
PIO/RPM.f90
PIO/OUTPUT.f90
PARAM/def_coupling.f90
PARAM/trait_zoneparam.f90
PARAM/trait_param.f90
PARAM/def_time.f90
PARAM/def_spat.f90
PARAM/def_project.f90
PARAM/def_probe.f90
PARAM/def_param.f90
PARAM/def_output.f90
PARAM/def_other.f90
PARAM/def_mpi.f90
PARAM/def_mrf.f90
PARAM/def_mesh.f90
PARAM/def_inverse.f90
PARAM/def_init.f90
PARAM/def_fctenv.f90
PARAM/def_connect.f90
PARAM/def_check.f90
PARAM/def_boco.f90
PARAM/def_amr.f90
PARAM/def_ale.f90
PARAM/MENU_SOLVER.f90
PARAM/MENU_NUM.f90
PARAM/MENU_MPI.f90
PARAM/MENU_INVERSE.f90
PARAM/MENU_INTEG.f90
PARAM/MENU_INIT.f90
PARAM/MENU_GEN.f90
PARAM/MENU_COUPLING.f90
PARAM/MENU_BOCO.f90
PARAM/MENU_AMR.f90
PARAM/MENU_ALE.f90
MODCOM/VARCOM.f90
MODCOM/TYPHMAKE.f90
MODCOM/MODINFO.f90
MODCOM/LAPACK.f90
MODCOM/GENLIB.f90
MODCOM/COMMTAG.f90
MGRID/update_ustboco_ghostface.f90
MGRID/update_ustboco_ghostcell.f90
MGRID/splitquadto3x3.f90
MGRID/splitquadto2x2.f90
MGRID/precalc_grad_lsq.f90
MGRID/postlimit_barth.f90
MGRID/postlimit_monotonic.f90
MGRID/integ_ustboco.f90
MGRID/gmres_free.f90
MGRID/grid_ustpreproc.f90
MGRID/grid_preproc.f90
MGRID/extractpart_grid.f90
MGRID/distrib_field.f90
MGRID/raffin_iso_tri.f90
MGRID/convert_to_svm_4kris.f90
MGRID/convert_to_svm_4wang.f90
MGRID/convert_to_svm_cub.f90
MGRID/convert_to_svm.f90
MGRID/calc_gradface_svm.f90
MGRID/calc_gradient_gauss.f90
MGRID/calc_gradient.f90
MGRID/calcboco_ust_sym.f90
MGRID/calcboco_ust_extrapol.f90
MGRID/calcboco_ust.f90
MGRID/calcboco_gen.f90
MGRID/calcboco_connect_per_match.f90
MGRID/calcboco_connect_match.f90
MGRID/calcboco_connect.f90
MGRID/init_implicit_dlu.f90
MGRID/init_implicit_bdlu.f90
MGRID/build_implicit_dlu.f90
MGRID/build_implicit_bdlu.f90
MGRID/MGRID.f90
MGRID/MESHALE.f90
MGRID/MATFREE.f90
MGRID/LIMITER.f90
MGRID/DEFFIELD.f90
MESH/test_ustmesh.f90
MESH/scale_mesh.f90
MESH/interpface_gradn_vect.f90
MESH/interpface_gradn_scal.f90
MESH/interpface_gradient_vect.f90
MESH/interpface_gradient_scal.f90
MESH/calc_ustmesh.f90
MESH/calc_connface.f90
MESH/GEO3D.f90
MATH/solve_gmres.f90
MATH/solve_jacobi.f90
MATH/solve_cgs.f90
MATH/solve_bicgstab.f90
MATH/solve_bicg_pjacobi.f90
MATH/solve_bicg.f90
MATH/dlu_lu.f90
MATH/dlu_gmres.f90
MATH/dlu_jacobi.f90
MATH/dlu_cgs.f90
MATH/dlu_bicg_pjacobi.f90
MATH/dlu_bicg.f90
MATH/bdlu_gmres.f90
MATH/bdlu_bicgstab.f90
MATH/bdlu_bicg.f90
MATH/SPMAT_SDLU.f90
MATH/SPMAT_CRS.f90
MATH/SPMAT_DLU.f90
MATH/SPMAT_BDLU.f90
MATH/SPARSE_MAT.f90
MATH/MATRIX.f90
MATH/MATRIX_ARRAY.f90
MATH/INTERPOL.f90
MATH/INTEGRATION.f90
MAIN/write_monitors_iteration.f90
MAIN/write_monitors_cycle.f90
MAIN/write_bocohisto.f90
MAIN/update_couplingboco.f90
MAIN/tstep_implicit.f90
MAIN/treelevel_rungekutta.f90
MAIN/treelevel_explicit.f90
MAIN/readallmesh.f90
MAIN/output_result.f90
MAIN/mpi_strategy_post.f90
MAIN/mpi_strategy_pre.f90
MAIN/inverse_calc_sensi.f90
MAIN/integ_treelevel.f90
MAIN/integzone_tstep_gridtree.f90
MAIN/integzone_tstep_lagrange.f90
MAIN/integration_grid.f90
MAIN/integration_cyclezone.f90
MAIN/integration_cycle_inverse.f90
MAIN/integration_cycle.f90
MAIN/integration.f90
MAIN/init_zone.f90
MAIN/init_world.f90
MAIN/init_probes.f90
MAIN/init_inverse.f90
MAIN/init_implicit.f90
MAIN/init_coupling.f90
MAIN/init_bocohisto.f90
MAIN/init_boco.f90
MAIN/implicit_solve.f90
MAIN/flux_to_res.f90
MAIN/echange_zonematch.f90
MAIN/echange_zonedata.f90
MAIN/echange.f90
MAIN/corr_varprim.f90
MAIN/correction.f90
MAIN/choixcorrection.f90
MAIN/check_end_cycle.f90
MAIN/calcul_raccord.f90
MAIN/calcdifflux.f90
MAIN/calc_rhs.f90
MAIN/calc_hres_states.f90
MAIN/calc_cpl_temp.f90
MAIN/calc_cpl_flux.f90
MAIN/build_implicit.f90
MAIN/analyse_zone.f90
MAIN/analyse.f90
MAIN/accumulfluxcorr.f90
MAIN/MODWORLD.f90
EXCHANGE/sendtogrid_mpi.f90
EXCHANGE/receivefromgrid_mpi.f90
EXCHANGE/init_exch_protocol_mpi.f90
EXCHANGE/finalize_exch_mpi.f90
EXCHANGE/exchange_zonal_timestep_mpi.f90
EXCHANGE/exchange_zonal_residual_mpi.f90
EXCHANGE/MPICOMM.f90
EQNS/tvdgraduns_vect.f90
EQNS/tvdgradstr_vect.f90
EQNS/tvdgradfst_vect.f90
EQNS/tvdgraduns_scal.f90
EQNS/tvdgradstr_scal.f90
EQNS/tvdgradfst_scal.f90
EQNS/stock_ns_cond_coupling.f90
EQNS/setboco_ns_outlet_sup.f90
EQNS/setboco_ns_outlet_sub.f90
EQNS/setboco_ns_isoth.f90
EQNS/setboco_ns_inlet_sup.f90
EQNS/setboco_ns_inlet_sub.f90
EQNS/setboco_ns_hconv.f90
EQNS/setboco_ns_flux.f90
EQNS/ns_bocojacobian.f90
EQNS/ns_bocoflux.f90
EQNS/integration_ns_ust.f90
EQNS/init_ns_ust.f90
EQNS/init_boco_ns.f90
EQNS/hres_ns_svm.f90
EQNS/hres_ns_muscluns.f90
EQNS/hres_ns_musclfast.f90
EQNS/hres_ns_muscl.f90
EQNS/def_model_ns.f90
EQNS/def_init_ns.f90
EQNS/def_boco_ns.f90
EQNS/calcboco_ns.f90
EQNS/calc_wallvelocity.f90
EQNS/calc_varprim_ns.f90
EQNS/calc_varcons_ns.f90
EQNS/calc_roe_states.f90
EQNS/calc_ns_timestep.f90
EQNS/calc_jacnum_inviscid.f90
EQNS/calc_jacflux.f90
EQNS/calc_jac_vlh.f90
EQNS/calc_jac_rusanov.f90
EQNS/calc_jac_hlldiag.f90
EQNS/calc_jac_hll.f90
EQNS/calc_jac_gencall.f90
EQNS/calc_source_axisym.f90
EQNS/calc_source_mrf.f90
EQNS/calc_source_ext.f90
EQNS/calc_flux_ale.f90
EQNS/calc_flux_viscous_face.f90
EQNS/calc_flux_viscous_cell.f90
EQNS/calc_flux_inviscid.f90
EQNS/calc_flux_rusanov.f90
EQNS/calc_flux_efm.f90
EQNS/calc_flux_hllc.f90
EQNS/calc_flux_hlle.f90
EQNS/calc_flux_ausmm.f90
EQNS/calc_flux_fvs_hwps.f90
EQNS/calc_flux_fvs_wps.f90
EQNS/MENU_NS.f90
EQNS/EQNS.f90
EQKDIF/stock_kdif_cond_coupling.f90
EQKDIF/setboco_kdif_isoth.f90
EQKDIF/setboco_kdif_hconv.f90
EQKDIF/setboco_kdif_flux.f90
EQKDIF/integration_kdif_ust.f90
EQKDIF/inverse_get_tmes.f90
EQKDIF/init_viewfactor.f90
EQKDIF/init_kdif_ust.f90
EQKDIF/init_boco_kdif.f90
EQKDIF/kdif_bocoflux.f90
EQKDIF/calcboco_kdif.f90
EQKDIF/calc_varprim_kdif.f90
EQKDIF/calc_varcons_kdif.f90
EQKDIF/calc_fouriercycle.f90
EQKDIF/calc_fourier.f90
EQKDIF/calc_flux_fluxspe_compact.f90
EQKDIF/calc_flux_fluxspe_consistant.f90
EQKDIF/calc_flux_fluxspe_3D.f90
EQKDIF/calc_flux_fluxspe.f90
EQKDIF/calc_flux_fluxface_compact.f90
EQKDIF/calc_flux_fluxface_consistant.f90
EQKDIF/calc_flux_fluxface_3D.f90
EQKDIF/calc_flux_fluxface.f90
EQKDIF/calc_kdif_timestep.f90
EQKDIF/calc_kdif_fourier.f90
EQKDIF/calc_kdif_flux.f90
EQKDIF/calcdifflux_kdif.f90
EQKDIF/def_model_kdif.f90
EQKDIF/def_init_kdif.f90
EQKDIF/def_boco_kdif.f90
EQKDIF/corr_varprim_kdif.f90
EQKDIF/add_kdif_coupled_radflux.f90
EQKDIF/add_kdif_radiativeflux.f90
EQKDIF/MENU_KDIF.f90
EQKDIF/MATERIAU.f90
EQKDIF/MATER_LOI.f90
EQKDIF/EQKDIF.f90
)
# ---------------------------------------------------------------------------/

# ---------------------------------------------------------------------------\
# Make sure the compiler can find modules files
INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/CFDTOOLS/Base)
INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/CFDTOOLS/Mesh)
INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/CFDTOOLS/Math)
INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/CFDTOOLS/Models)
INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/CFDTOOLS/FileFormat)

# Make sure the linker can find this library once it is built.
#LINK_DIRECTORIES ({${PROJECT_NAME}_BINARY_DIR}/${KIT})
# ---------------------------------------------------------------------------/

# ---------------------------------------------------------------------------\
ADD_LIBRARY(${pName}${KIT} ${Kit_SRCS})
TARGET_LINK_LIBRARIES(${pName}${KIT} ${KIT_LIBS})
# ---------------------------------------------------------------------------/
ADD_EXECUTABLE(${KIT}_Solver
              MAIN/main.f90)
TARGET_LINK_LIBRARIES(${KIT}_Solver
                      ${KIT_LIBS})
